Fix: Fixed right columns should have the area above the scrollbar blocked out - this wasn't happening for Bootstrap, Foundation or jQuery UI
- Thread 44525

--- a/css/fixedColumns.jqueryui.scss
+++ b/css/fixedColumns.jqueryui.scss
@@ -7,3 +7,10 @@ div.DTFC_RightWrapper table.dataTable {
 		border-bottom: none;
 	}
 }
+
+// Block out the gap above the scrollbar on the right, when there is a fixed
+// right column
+div.DTFC_Blocker {
+	background-color: white;
+}
+
